--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,17 @@ body{
        border-left: none;
        }
 
-.column {
-    font-size:14px;
-  float: left;
-  width: 50%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+#loader{
+z-index:999999;
+display:block;
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background-image:url(../images/loader.gif);
+background-position:  50% 50%;
+background-repeat:  no-repeat; 
+background-color: rgba(255, 255, 255, 0.7);
+content: '<div>Loading.....</div>';    
 }
