Added QR and Simulation Generator

--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,23 @@ background-repeat:  no-repeat;
 background-color: rgba(255, 255, 255, 0.7);
 content: '<div>Loading.....</div>';    
 }
+
+form .error {
+  color: #ff0000;
+}
+
+.longpress {
+    -webkit-animation: 2s longpress;
+            animation: 2s longpress;
+    
+}
+
+@-webkit-keyframes longpress {
+    0%, 20% { background: #bd2130; }
+    100% { background: #28a745; }
+}
+
+@keyframes longpress {
+    0%, 20% { background: #bd2130; }
+    100% { background: #28a745; }
+}
